@@ -1130,6 +1130,7 @@ XLIFF_OPTIONS_26=&Compatibility with OmegaT 2.6
 XLIFF_OPTIONS_36_ONLY=The following options apply to the 3.x filter only
 XLIFF_OPTIONS_FORCE2F=&Force shortcut to "f" for <it pos="end"> tags
 XLIFF_OPTIONS_IGNORE4PH=&Ignore type and ctype attributes when building <ph> tag shortcuts
+XLIFF_OPTIONS_IGNORE4BPT=Ignore type and ctype attributes when building <&bpt> and <ept> tag shortcuts
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
 
