@@ -6,6 +6,7 @@
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
                2007-2012 Didier Briel
                2013 Didier Briel, Piotr Kulik
+               2014 Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -62,6 +63,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
         compatibility26CB.setSelected(options.get26Compatibility());
         forceshortcut2fCB.setSelected(options.getForceShortcutToF());
         ignoreTypeForPhTagsCB.setSelected(options.getIgnoreTypeForPhTags());
+        ignoreTypeForBptTagsCB.setSelected(options.getIgnoreTypeForBptTags());
                 
         // Handle escape key to close the window
         KeyStroke escape = KeyStroke.getKeyStroke(KeyEvent.VK_ESCAPE, 0, false);
@@ -107,6 +109,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
         jLabel1 = new javax.swing.JLabel();
         forceshortcut2fCB = new javax.swing.JCheckBox();
         ignoreTypeForPhTagsCB = new javax.swing.JCheckBox();
+        ignoreTypeForBptTagsCB = new javax.swing.JCheckBox();
 
         setTitle(OStrings.getString("XLIFF_OPTIONS_TITLE")); // NOI18N
         setCursor(new java.awt.Cursor(java.awt.Cursor.DEFAULT_CURSOR));
@@ -157,6 +160,9 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
         org.openide.awt.Mnemonics.setLocalizedText(ignoreTypeForPhTagsCB, OStrings.getString("XLIFF_OPTIONS_IGNORE4PH")); // NOI18N
         jPanel1.add(ignoreTypeForPhTagsCB);
 
+        org.openide.awt.Mnemonics.setLocalizedText(ignoreTypeForBptTagsCB, OStrings.getString("XLIFF_OPTIONS_IGNORE4BPT")); // NOI18N
+        jPanel1.add(ignoreTypeForBptTagsCB);
+
         getContentPane().add(jPanel1, java.awt.BorderLayout.CENTER);
 
         pack();
@@ -169,6 +175,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
         options.set26Compatibility(compatibility26CB.isSelected());
         options.setForceShortcutToF(forceshortcut2fCB.isSelected());
         options.setIgnoreTypeForPhTags(ignoreTypeForPhTagsCB.isSelected());
+        options.setIgnoreTypeForBptTags(ignoreTypeForBptTagsCB.isSelected());
 
         doClose(RET_OK);
     }// GEN-LAST:event_okButtonActionPerformed
@@ -197,6 +204,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
     private javax.swing.JButton cancelButton;
     private javax.swing.JCheckBox compatibility26CB;
     private javax.swing.JCheckBox forceshortcut2fCB;
+    private javax.swing.JCheckBox ignoreTypeForBptTagsCB;
     private javax.swing.JCheckBox ignoreTypeForPhTagsCB;
     private javax.swing.JLabel jLabel1;
     private javax.swing.JLabel jLabel2;
